fix for button mobile not clickable

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -395,7 +395,7 @@ input#mint-address {
 
   div.container-estate-btns {
     display: inline-block;
-    width: 20%;
+    width: 100%;
     margin-left:28%;
   }
 }
